--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous"
-    >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login</title>
 </head>
 
@@ -25,10 +21,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/usersManagament/src/pages/login.html">Login</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="/usersManagament/src/pages/login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/usersManagament/src/pages/registration.html">Registration</a>
+                        <a class="nav-link" aria-current="page"
+                            href="/usersManagament/src/pages/registration.html">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +45,8 @@
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" minlength="8" class="form-control" name="password" id="password" required>
+                        <input type="password" minlength="8" class="form-control" name="password" id="password"
+                            required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -55,68 +54,48 @@
             <div class="col-2"></div>
         </div>
     </div>
-    <script type="text/javascript" src="/usersManagament/src/scripts/users_db_mock.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    ></script>
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/token_storage.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/constants.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/redirections.js"></script>
     <script type="text/javascript">
         function login() {
-            const users = usersStorage.getAll();
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+            const email = $('#email').val();
+            const password = $('#password').val();
 
-            const foundUser = users.find(user => user.email === email && user.password === password);
-
-            if (foundUser) {
-                document.location = '/usersManagament/src/pages/users.html';
-                return;
-            }
-
-            alert('Login credentials are incorrect!');
+            $.ajax({
+                url: `${apiHost}/login`,
+                type: 'POST',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                data: JSON.stringify({
+                    email: email,
+                    password: password,
+                }),
+                success: function (response) {
+                    alert('Successfully login!');
+                    setToken(response.token);
+                    redirectToUsersPage();
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
         }
 
-        // Call API login endpoint using jQuery
-
-        // function login() {
-        //     const email = document.getElementById('email').value;
-        //     const password = document.getElementById('password').value;
-
-        //     $.ajax({
-        //         url: 'http://localhost:3000/login',
-        //         type: 'POST',
-        //         contentType: 'application/json; charset=utf-8',
-        //         dataType: 'json',
-        //         data: JSON.stringify({
-        //             email: email,
-        //             password: password,
-        //         }),
-        //         success: function (response) {
-        //             alert('Successfully login!');
-        //             setStorageItem('token', response.token);
-        //             document.location = '/usersManagament/src/pages/users.html';
-        //         },
-        //         error: function (error) {
-        //             alert(error.responseText);
-        //         },
-        //     });
-        // }
-
-        document.addEventListener('DOMContentLoaded', function () {
-            usersStorage.init();
-
-            document.getElementById('loginForm').addEventListener('submit', function (event) {
+        $(document).ready(function () {
+            $('#loginForm').submit(function (event) {
                 event.preventDefault();
                 login();
             });
         });
     </script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-    ></script>
 </body>
+
 </html>
