--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -4,19 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous"
-    >
-    <link
-        rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
         integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    />
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         .clickable:hover {
             cursor: pointer;
@@ -38,7 +31,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/usersManagament/src/pages/users.html">Manage Users</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="/usersManagament/src/pages/users.html">Manage Users</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -80,7 +74,8 @@
             </thead>
             <tbody id="usersTableBody"></tbody>
         </table>
-        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addNewUserModal">Add New</button>
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addNewUserModal">Add
+            New</button>
     </div>
 
     <div class="modal fade" id="viewUserModal" tabindex="-1" aria-labelledby="viewUserModalLabel" aria-hidden="true">
@@ -114,7 +109,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addNewUserModal" tabindex="-1" aria-labelledby="addNewUserModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addNewUserModal" tabindex="-1" aria-labelledby="addNewUserModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -143,11 +139,8 @@
                             <label for="newPassword" class="form-label">Password</label>
                             <input type="password" class="form-control" id="newPassword" minlength="8" required>
                         </div>
-                        <div class="mb-3">
-                            <label for="newPasswordConfirmation" class="form-label">Password Confirmation</label>
-                            <input type="password" class="form-control" id="newPasswordConfirmation" minlength="8" required>
-                        </div>
-                        <button id="submitNewUser" type="submit" class="btn btn-primary" style="display: none;">Submit</button>
+                        <button id="submitNewUser" type="submit" class="btn btn-primary"
+                            style="display: none;">Submit</button>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -157,18 +150,21 @@
             </div>
         </div>
     </div>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    ></script>
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/constants.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/passwords.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/redirections.js"></script>
-    <script type="text/javascript" src="/usersManagament/src/scripts/users_db_mock.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/token_storage.js"></script>
     <script type="text/javascript">
         let sortColumn = null;
         let sortDirection = null;
+
+        function getUserIdByButton(button) {
+            return +button.parent().parent().parent().data('user-id');
+        }
 
         function getUserByButton(button) {
             const userId = +button.parentElement.parentElement.parentElement.dataset.userId;
@@ -218,128 +214,148 @@
         }
 
         function clickDeleteUserBtn(button) {
-            const user = getUserByButton(button);
+            button = $(button);
+            const userId = getUserIdByButton(button);
 
-            if (!user) {
-                return;
-            }
-
-            button.parentElement.parentElement.parentElement.remove();
-            usersStorage.delete(user.id);
-        }
-
-        function clickViewUserBtn(button) {
-            const user = getUserByButton(button);
-
-            if (!user) {
-                return;
-            }
-
-            document.querySelector('#viewUserModal div.modal-body').innerHTML = `
-                <p>
-                    <strong>Id:</strong>
-                    ${user.id}
-                </p>
-                <p>
-                    <strong>Name:</strong>
-                    ${user.firstName} ${user.lastName}
-                </p>
-                <p>
-                    <strong>Email:</strong>
-                    ${user.email}
-                </p>
-                <p>
-                    <strong>Phone:</strong>
-                    ${user.phone}
-                </p>
-            `;
-        }
-
-        function clickEditUserBtn(button) {
-            const user = getUserByButton(button);
-
-            if (!user) {
-                return;
-            }
-
-            document.querySelector('#editUserModal div.modal-body').innerHTML = `
-                <form>
-                    <div class="mb-3">
-                        <label for="userId" class="form-label">Id</label>
-                        <input type="text" class="form-control" id="userId" disabled value="${user.id}">
-                    </div>
-                    <div class="mb-3">
-                        <label for="firstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="firstName" value="${user.firstName}">
-                    </div>
-                    <div class="mb-3">
-                        <label for="lastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" value="${user.lastName}">
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" value="${user.email}">
-                    </div>
-                    <div class="mb-3">
-                        <label for="phone" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="phone" value="${user.phone}">
-                    </div>
-                    <div class="mb-3">
-                        <label for="oldPassword" class="form-label">Old Password</label>
-                        <input type="password" class="form-control" id="oldPassword" minlength="8" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" minlength="8" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="passwordConfirmation" class="form-label">Password Confirmation</label>
-                        <input type="password" class="form-control" id="passwordConfirmation" minlength="8" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="display: none;">Submit</button>
-                </form>
-            `;
-
-            document.querySelector('#editUserModal div.modal-body form').addEventListener('submit', handleUserEditFormSubmit);
-        }
-
-        function handleUserEdit() {
-            document.getElementById('saveUserBtn').addEventListener('click', function () {
-                this.parentElement.parentElement.querySelector('form > button').click();
+            $.ajax({
+                url: `${apiHost}/users/${userId}`,
+                type: 'DELETE',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + getToken());
+                },
+                success: function () {
+                    alert('This user was successfully removed.');
+                    button.parent().parent().parent().remove();
+                },
+                error: function (error) {
+                    console.log(error);
+                },
             });
         }
 
+        function clickViewUserBtn(button) {
+            button = $(button);
+            const userId = getUserIdByButton(button);
+
+            $.ajax({
+                url: `${apiHost}/users/${userId}`,
+                type: 'GET',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + getToken());
+                },
+                success: function (user) {
+                    $('#viewUserModal div.modal-body').html(`
+                        <p>
+                            <strong>Id:</strong>
+                            ${user.id}
+                        </p>
+                        <p>
+                            <strong>Name:</strong>
+                            ${user.firstName} ${user.lastName}
+                        </p>
+                        <p>
+                            <strong>Email:</strong>
+                            ${user.email}
+                        </p>
+                        <p>
+                            <strong>Phone:</strong>
+                            ${user.phone}
+                        </p>
+                    `);
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
+        }
+
+        function clickEditUserBtn(button) {
+            button = $(button);
+            const userId = getUserIdByButton(button);
+
+            $.ajax({
+                url: `${apiHost}/users/${userId}`,
+                type: 'GET',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + getToken());
+                },
+                success: function (user) {
+                    $('#editUserModal div.modal-body').html(`
+                        <form>
+                            <div class="mb-3">
+                                <label for="userId" class="form-label">Id</label>
+                                <input type="text" class="form-control" id="userId" disabled value="${user.id}">
+                            </div>
+                            <div class="mb-3">
+                                <label for="firstName" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="firstName" value="${user.firstName}">
+                            </div>
+                            <div class="mb-3">
+                                <label for="lastName" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" value="${user.lastName}">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" value="${user.email}">
+                            </div>
+                            <div class="mb-3">
+                                <label for="phone" class="form-label">Phone</label>
+                                <input type="text" class="form-control" id="phone" value="${user.phone}">
+                            </div>
+                        </form>
+                    `);
+                    $('#editUserModal div.modal-body form').submit(handleUserEditFormSubmit);
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
+        }
+
+        function handleUserEdit() {
+            $('#saveUserBtn').click(function () {
+                $('#editUserModal div.modal-body form').submit();
+            })
+        }
+
+        // @todo: validate the form
         function handleUserEditFormSubmit(event) {
             event.preventDefault();
-            const userId = +document.getElementById('userId').value;
-            let user = null;
+            const userId = +$('#userId').val();
+            console.log(userId);
 
-            if (!validatePasswordAndConfirmation()) {
-                return;
-            }
+            $.ajax({
+                url: `${apiHost}/users/${userId}`,
+                type: 'PATCH',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                data: JSON.stringify({
+                    email: $('#email').val(),
+                    firstName: $('#firstName').val(),
+                    lastName: $('#lastName').val(),
+                    phone: $('#phone').val(),
+                }),
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + getToken());
+                },
+                success: function (user) {
+                    $(`tr[data-user-id="${userId}"] > td:nth-child(2)`).html(user.firstName);
+                    $(`tr[data-user-id="${userId}"] > td:nth-child(3)`).html(user.lastName);
+                    $(`tr[data-user-id="${userId}"] > td:nth-child(4)`).html(user.email);
+                    $(`tr[data-user-id="${userId}"] > td:nth-child(5)`).html(user.phone);
 
-            try {
-                user = usersStorage.update(userId, {
-                    firstName: document.getElementById('firstName').value,
-                    lastName: document.getElementById('lastName').value,
-                    email: document.getElementById('email').value,
-                    phone: document.getElementById('phone').value,
-                    oldPassword: document.getElementById('oldPassword').value,
-                    password: document.getElementById('password').value,
-                });
-            } catch (error) {
-                alert(error.message);
-                return;
-            }
-
-            document.querySelector(`tr[data-user-id="${userId}"] > td:nth-child(2)`).innerHTML = user.firstName;
-            document.querySelector(`tr[data-user-id="${userId}"] > td:nth-child(3)`).innerHTML = user.lastName;
-            document.querySelector(`tr[data-user-id="${userId}"] > td:nth-child(4)`).innerHTML = user.email;
-            document.querySelector(`tr[data-user-id="${userId}"] > td:nth-child(5)`).innerHTML = user.phone;
-
-            let modal = document.getElementById('editUserModal');
-            modal = bootstrap.Modal.getInstance(modal);
-            modal.hide();
+                    $('#editUserModal').modal('hide');
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
         }
 
         function handleNewUserSave() {
@@ -372,6 +388,7 @@
             });
         }
 
+        // todo: send a proper request to api
         function handleSorting() {
             $('.clickable').click(function () {
                 const upIcon = '<i class="bi bi-sort-up"></i>';
@@ -393,51 +410,43 @@
                     iconElement.html(upIcon);
                     sortDirection = 'ASC';
                 }
-
-                usersStorage.sort(sortColumn, sortDirection);
-                renderUsersTable();
             });
         }
 
-        function renderUsersTable() {
-            usersStorage.init();
+        function renderUsersTable(users) {
             $('#usersTableBody').html('');
 
-            for (const user of usersStorage.getAll()) {
+            for (const user of users) {
                 addUserToTable(user);
             }
-
-            handleUserEdit();
-            handleNewUserSave();
         }
 
         // ----------------- WHEN PAGE IS LOADED -----------------
         document.addEventListener('DOMContentLoaded', function () {
+            handleUserEdit();
+            handleNewUserSave();
             // Get a list of users via jQuesry ajax call to API endpoint
-            // $.ajax({
-            //     url: 'http://localhost:3000/users',
-            //     type: 'GET',
-            //     contentType: 'application/json; charset=utf-8',
-            //     dataType: 'json',
-            //     beforeSend: function (xhr) {
-            //         xhr.setRequestHeader('Authorization', 'Bearer ' + getStorageItem('token'));
-            //     },
-            //     success: function (usersResponse) {
-            //         console.log(usersResponse);
-            //     },
-            //     error: function (error) {
-            //         alert(error.responseText);
-            //     },
-            // });
-
-            renderUsersTable();
-            handleSorting();
+            $.ajax({
+                url: `${apiHost}/users`,
+                type: 'GET',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + getToken());
+                },
+                success: function (users) {
+                    renderUsersTable(users);
+                    handleSorting();
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
         });
     </script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-    ></script>
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
